--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ nav , footer {
 
 nav {
     position: fixed;
+    z-index: 100;
 }
 
 nav ul {
@@ -100,16 +101,16 @@ nav ul {
 nav ul li {
     text-transform: uppercase;
     display: inline-block;
-    line-height: 10vh;
-    padding: 0 2vw;
+    line-height: 64px;
+    padding: 0 20px;
     color: var(--black-color);
     cursor: pointer;
 }
 
 nav img {
-    max-height: 8vh;
+    max-height: 48px;
     width: auto;
-    margin-top: 1vh;
+    margin-top: 6px;
 }
 
 nav:before, nav:after {
@@ -123,16 +124,15 @@ nav ul li:hover {
     transition-duration: 0.7s;
 }
 
-nav h1 {
+nav h2 {
     list-style-type: none;
-    position: absolute;
     padding: 0;
-    margin: -8vh 16vh;
-    font-size: 5vh;
+    margin: -48px 96px;
+    font-size: 30px;
     font-style: italic;
 }
 
-header {
+.jumbotron {
     height: 100vh;
     width: 100%;
     background-image: url("https://cdn.pixabay.com/photo/2012/06/19/10/32/owl-50267__340.jpg");
@@ -140,13 +140,7 @@ header {
     background-position: center;
 }
 
-header a {
-    color: var(--pink-color);
-    background-color:var(--black-color);
-    transition: background-color 0.3s linear, color 0.3s linear;
-
-}
-header>div>div {
+.jumbotron>div {
     display: block;
     position: absolute;
     top: 40%;
@@ -157,57 +151,55 @@ header>div>div {
     transition: margin-left .7s ease-out;
 }
 
-header:hover>div>div {
+.jumbotron:hover>div {
     margin-left: 0;
 }
 
-header h1 {
+.jumbotron h1 {
     display: inline-block;
     vertical-align: middle;
 }
 
-header a {
+.jumbotron a {
     display: inline-block;
     margin-left: 20px;
     vertical-align: middle;
     text-align: center;
     width: 120px;
-    font-size: 1.4em;
+    color: var(--pink-color);
+    background-color:var(--black-color);
+    transition: background-color 0.3s linear, color 0.3s linear;
+    font-size: 22px;
     font-weight: 500;
     padding: 8px 12px;
     text-decoration: none;
-    box-shadow: 0 0 7px #555;
+    font-style: italic;
     cursor: pointer;
 }
 
-header a:hover {
+.jumbotron a:hover {
     color: var(--black-color);
     background-color: var(--white-color);
-}
-
-.text h2 {
-    margin: 3vh 0 ;
-    line-height: 5vh;
-    text-align: left;
-}
-
-.text p {
-    margin-top: 4vh;
-    text-align: justify;
-}
-
-footer p {
-    margin: auto;
-    text-align: center;
-    line-height: 10vh;
-    color: var(--black-color);
 }
 
 main {
     margin-top: 20px;
     padding: 5%;
-    min-height: 20vh;
+    min-height: 120px;
     text-align: justify;
+}
+
+.text h2 {
+    margin: 18px 0 ;
+    line-height: 50px;
+    text-align: left;
+    font-size: 30px;
+}
+
+.text p {
+    margin-top: 24px;
+    text-align: justify;
+    font-size: 20px;
 }
 
 .gallery:before, .gallery:after {
@@ -217,7 +209,7 @@ main {
 }
 
 .gallery {
-    margin: 5vh auto;
+    margin: 30px auto;
 }
 
 .photo {
@@ -229,7 +221,7 @@ main {
 .photo img {
     width: 100%;
     height: auto;
-    padding-top: 0vh;
+    padding: 1px 0 50px;
 }
 
 .photo:last-of-type {
@@ -240,13 +232,24 @@ main {
     max-width: 100%;
     height: auto;
     text-align: center;
-    margin-bottom: 4vh;
+    margin-bottom: 30px;
 }
+
+footer p {
+     margin: auto;
+     text-align: center;
+     line-height: 60px;
+     color: var(--black-color);
+ }
 
 @media (max-width: 1200px) {
 
     .container {
         width: 100%;
+    }
+
+    .jumbotron>div {
+        width: 560px;
     }
 
     .photos {
@@ -273,10 +276,12 @@ main {
     nav {
         height: auto;
         text-align: center;
+        position: relative;
     }
 
     nav ul {
         float: none;
+        padding-top: 80px;
     }
 
     nav ul li {
@@ -284,16 +289,22 @@ main {
     }
 
     nav img {
-        max-height: 15vh;
-        margin-right: 41vh;
+        max-height: 90px;
+        margin-right: 246px;
     }
 
-    nav h1 {
-        display: inline-flex;
-        margin: -51vh -6vh;
+    .logo {
+        width: 100%;
+        margin: 0 auto;
     }
 
-    header {
+    .logo h2 {
+        position: relative;
+        width: 100%;
+        margin-top: -60px;
+    }
+
+    .jumbotron {
         margin-top: 0;
         background-image: url("https://cdn.pixabay.com/photo/2012/06/19/10/32/owl-50267__340.jpg");
         background-size: cover;
@@ -301,11 +312,10 @@ main {
         background-position: center;
     }
 
-    header>div>div {
+    .jumbotron>div {
         width: 100%;
-        margin-left: auto;
-        padding-bottom: 2vh;
-        top: 55%;
+        margin-left: -100%;
+        top: 60%;
     }
 
     header a {
@@ -315,17 +325,17 @@ main {
     }
 
     .text h2 {
-        padding: 8%;
+        padding: 4%;
     }
 
     .text p {
         text-align: justify;
-        padding: 8%;
-        font-size: 1em;
+        padding: 4%;
+        font-size: 20px;
     }
 
     .gallery {
-        padding: 0 4vh 0 4vh;
+        padding: 0 24px 0 24px;
     }
 
     .photo {
